--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "nuxt": "^2.14.5",
+    "vue-pdf": "^4.2.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.0.2"
